tests/fail/117-fail-time-unit-on-naive-date.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

use chrono::NaiveDate;

#[derive(ToDataFrame)]
struct Bad {
    #[df_derive(time_unit = "ms")]
    when: NaiveDate,
}

fn main() {}
